--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ $ git checkout gh-pages
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/bennsoncat/bennitestacc/zipball/master" class="button">
+          <a href="http://bleuzen.jimdo.com/downloads/" class="button">
             <small>Download</small>
             .zip file
           </a>
